Add to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,4 @@ project(Programiranje2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Programiranje2 main.cpp)
-#add_executable(RV1 rv1.cpp)
+add_executable(Programiranje2 main.cpp) #Tukaj dodas header file v oklepaj npr: add_executable(Programiranje2 main.cpp main.h)
