--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ add_executable(Naloga0202 Naloga02/Naloga0202/naloga0202.cpp
         Naloga02/Naloga0202/Expense.cpp
         Naloga02/Naloga0202/Expense.h)
 add_executable(Naloga0301 Naloga03/Naloga0301/Date.cpp Naloga03/Naloga0301/Date.h
-        Naloga03/Naloga0301/naloga0301.cpp)
+        Naloga03/Naloga0301/naloga0301.cpp Naloga03/Naloga0302/TextUtility.h Naloga03/Naloga0302/TextUtility.cpp)
 add_executable(Naloga0302 Naloga03/Naloga0302/TextUtility.cpp Naloga03/Naloga0302/TextUtility.h
         Naloga03/Naloga0302/naloga0302.cpp)
