--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,12 +64,30 @@ add_executable(Naloga0502
         Naloga03/Naloga0302/TextUtility.cpp
         Naloga03/Naloga0302/TextUtility.h)
 
-add_executable(Naloga0601 Naloga6/Naloga0601/Concert.cpp Naloga6/Naloga0601/Concert.h Naloga6/Naloga0601/Date.cpp Naloga6/Naloga0601/Date.h Naloga6/Naloga0601/Event.cpp Naloga6/Naloga0601/Event.h Naloga6/Naloga0601/EventOrganizer.cpp Naloga6/Naloga0601/EventOrganizer.h Naloga6/Naloga0601/Location.cpp Naloga6/Naloga0601/Location.h Naloga6/Naloga0601/naloga0601.cpp Naloga03/Naloga0302/TextUtility.cpp
+add_executable(Naloga0601
+        Naloga6/Naloga0601/Concert.cpp
+        Naloga6/Naloga0601/Concert.h
+        Naloga6/Naloga0601/Date.cpp
+        Naloga6/Naloga0601/Date.h
+        Naloga6/Naloga0601/Event.cpp
+        Naloga6/Naloga0601/Event.h
+        Naloga6/Naloga0601/EventOrganizer.cpp
+        Naloga6/Naloga0601/EventOrganizer.h
+        Naloga6/Naloga0601/Location.cpp
+        Naloga6/Naloga0601/Location.h
+        Naloga6/Naloga0601/naloga0601.cpp
+        Naloga03/Naloga0302/TextUtility.cpp
         Naloga03/Naloga0302/TextUtility.h
         Naloga6/Naloga0601/Sponsor.cpp
-        Naloga6/Naloga0601/FinancialSponsor.cpp)
+        Naloga6/Naloga0601/FinancialSponsor.cpp
+        Naloga6/Naloga0601/SlowFoodExpirience.cpp
+        Naloga6/Naloga0601/SlowFoodExpirience.h
+)
 add_executable(Naloga0602 Naloga6/Naloga0602/Graph.cpp Naloga6/Naloga0602/Graph.h
         Naloga6/Naloga0602/PrintUtility.cpp
         Naloga6/Naloga0602/Histogram.cpp
         Naloga6/Naloga0602/Histogram.h
         Naloga6/Naloga0602/naloga0602.cpp)
+add_executable(Naloga0701 Naloga7/Naloga0701/Point.cpp Naloga7/Naloga0701/Point.h Naloga7/Naloga0701/naloga0701.cpp
+        Naloga7/Naloga0701/VectorUtil.h
+)
